<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_menu_new"
        android:title="@string/main_menu_new"
        android:alphabeticShortcut="@string/main_menu_searchshortcut"
        android:orderInCategory="1"
        >
    </item>
    <item
        android:id="@+id/main_menu_search"
        android:title="@string/main_menu_search"
        android:alphabeticShortcut="@string/main_menu_searchshortcut"
        android:orderInCategory="2"
        >
    </item>
    <item
            android:id="@+id/main_menu_options"
            android:title="@string/main_menu_options"
            android:alphabeticShortcut="@string/main_menu_optionsshortcut"
            android:orderInCategory="3"
            >
    </item>
</menu>